# servy

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: push.yml
nix/: jnsgruk-container.nix  jnsgruk-content.nix  jnsgruk.nix  servy.nix
src/lib/: config.rs  context.rs  handlers.rs  lib.rs  metrics.rs  redirects.rs  servy.rs
tests/: assets.rs  common.rs  metrics.rs  redirects.rs
tests/servy_assets/: index.html
tests/servy_assets/nested/: index.html
